--- a/templates/datos/politico_detail.html
+++ b/templates/datos/politico_detail.html
@@ -1,7 +1,18 @@
+{% extends "contenedor.html" %}
+
+{% block content %}
+
 <h1>{{object.nombre}}</h1>
 
 <h4>Cagadas</h4>
 
-{% for evento in object.evento_set.all %}
-{{evento}}
+<ul>
+{% for evento in object.eventos %}
+	<li>
+		<a href="{% url 'detalle-evento' object.slug evento.slug %}">
+			{{evento}}
+		</a>
+	</li>
 {% endfor %}
+</ul>
+{% endblock %}
