--- a/templates/contenedor.html
+++ b/templates/contenedor.html
@@ -1,8 +1,10 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Malditos políticos</title>
+	<script type="text/javascript" src="{% static "bower_components/jquery/dist/jquery.min.js" %}"></script>
 </head>
 <body>
 {% block content %}
