--- a/templates/datos/evento_form.html
+++ b/templates/datos/evento_form.html
@@ -1,4 +1,5 @@
 {% extends "contenedor.html" %}
+{% load staticfiles %}
 
 {% block content %}
 
@@ -6,4 +7,14 @@
     {{ form.as_p }}
     <button type="submit">Guardar</button>
 </form>
+
+<link rel="stylesheet" type="text/css" href="{% static "bower_components/datetimepicker/jquery.datetimepicker.css" %}">
+<script type="text/javascript" src="{% static "bower_components/datetimepicker/jquery.datetimepicker.js" %}"></script>
+
+<script type="text/javascript">
+	jQuery('#id_fecha').datetimepicker({
+		format:'Y-m-d H:i:s',
+	});	
+</script>
+
 {% endblock %}
