--- a/templates/contenedor.html
+++ b/templates/contenedor.html
@@ -7,6 +7,7 @@
 	<script type="text/javascript" src="{% static "bower_components/jquery/dist/jquery.min.js" %}"></script>
 </head>
 <body>
+{{usuario}}
 {% block content %}
 
 {% endblock %}
