--- a/templates/contenedor.html
+++ b/templates/contenedor.html
@@ -7,7 +7,10 @@
 	<script type="text/javascript" src="{% static "bower_components/jquery/dist/jquery.min.js" %}"></script>
 </head>
 <body>
-{{usuario}}
+{% if usuario %}
+	{{usuario}}
+	<a href="/logout">Salir</a>
+{% endif %}
 {% block content %}
 
 {% endblock %}
