--- a/templates/registro.html
+++ b/templates/registro.html
@@ -4,8 +4,7 @@
 
 <form action="" method="post">{% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Logear</button>
-    <a href="{% url "registro" arg1=1 %}">Registrar</a>
+    <button type="submit">Registrar</button>
 </form>
 
 {% endblock %}
