--- a/templates/datos/evento_detail.html
+++ b/templates/datos/evento_detail.html
@@ -1,5 +1,5 @@
-{% extends "contenedor.html" %}
+{% extends "cont-sidebar.html" %}
 
-{% block content %}
+{% block inner_content %}
 <h1>{{object}}</h1>
 {% endblock %}
