--- a/templates/contenedor.html
+++ b/templates/contenedor.html
@@ -1,18 +1,197 @@
 {% load staticfiles %}
 <!DOCTYPE html>
-<html>
-<head>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Malditos políticos</title>
-	<script type="text/javascript" src="{% static "bower_components/jquery/dist/jquery.min.js" %}"></script>
-</head>
-<body>
-{% if usuario %}
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
+    <meta name="description" content="danish minimal responsive personal blog and portfolio theme">
+    <meta name="keywords" content="blog, personal blog, portfolio, responsive, bootstrap, masonry, isotope, parallax, multi color, 2 columns, minimal, elegant, simple, clean">
+    <meta name="author" content="templateninja">
+    <link rel="shortcut icon" href="img/favicon.png">
+
+    <title>Danish./</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="{% static "css/bootstrap.css" %}" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href='http://fonts.googleapis.com/css?family=Raleway:400,800' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Noto+Serif:700,400italic' rel='stylesheet' type='text/css'>
+    <link href="{% static "css/font-awesome.min.css" %}" rel="stylesheet">
+    <link href="{% static "css/style.min.css" %}" rel="stylesheet">
+    <link href="{% static "css/responsive.min.css" %}" rel="stylesheet">
+    <link href="{% static "css/blue.min.css" %}" rel="stylesheet" id="color-style">
+    <!-- begin:demo-css -->
+    <link href="{% static "css/demo.css" %}" rel="stylesheet">
+    <!-- end:demo-css -->
+
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="{% static "js/html5shiv.js" %}"></script>
+      <script src="{% static "js/respond.min.js" %}"></script>
+    <![endif]-->    
+    <script src="{% static "js/jquery.js" %}"></script>
+  </head>
+
+  <body>
+
+    <!-- begin:navbar -->
+    <nav class="navbar navbar-default navbar-transparent navbar-fixed-top" role="navigation">
+      <div class="container">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-top">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="{% url "home" %}"><i class="fa fa-recycle"></i> <span>Dani</span>sh.</a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="navbar-top">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="page.html">Page</a></li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li class="active"><a href="blog.html">Blog</a></li>
+                <li><a href="single.html">Single</a></li>
+                <li><a href="archive.html">Archives</a></li>
+                <li><a href="category.html">Category</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="portfolio-single.html">Portfolio Single</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
+    </nav>
+    <!-- end:navbar -->
+
+
+    <!-- begin:header -->
+    <section id="header" class="heading" style="background: url({% static "img/image-post-header-03.jpg" %});">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8 col-md-offset-2">
+                    <div class="title-desc">
+                        <h2>Our Blog /</h2>
+                        <p>Danish is a sexy theme.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="overlay"></div>
+    </section>
+    <!-- end:header -->
+<!--{% if usuario %}
 	{{usuario}}
 	<a href="/logout">Salir</a>
-{% endif %}
+{% endif %}-->
 {% block content %}
 
 {% endblock %}
-</body>
+
+    <!-- begin:footer -->
+    <section id="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3 col-sm-3">
+                    <div class="widget">
+                        <h3>Recent Post</h3>
+                        <ul class="list-unstyled">
+                            <li><a href="#">Lorem ipsum</a></li>
+                            <li><a href="#">Lorem</a></li>
+                            <li><a href="#">Lorem ipsum dolor</a></li>
+                            <li><a href="#">Lorem sit</a></li>
+                            <li><a href="#">Lorem dolor sit</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-3">
+                    <div class="widget">
+                        <h3>Useful Links</h3>
+                        <ul class="list-unstyled">
+                            <li><a href="#">Lorem sit</a></li>
+                            <li><a href="#">Lorem dolor sit</a></li>
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">About</a></li>
+                            <li><a href="#">Contact</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-6 col-sm-5">
+                    <div class="footer-logo">
+                        <h2><i class="fa fa-recycle"></i> Danish.</h2>
+                        <p>1024 Main Street, Jjrn Plrt Btl<br>+62 (123) 456-7890</p>
+                        <br>
+                        <p class="muted">© 2014 Brand Inc.</p>
+                        <a href="#">Terms of Service</a> <span>/</span> 
+                        <a href="#">Privacy</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- end:footer -->
+
+    <!-- begin:copyright -->
+    <section id="copyright">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 col-sm-6 copy-left">
+            <p>Copyright &copy; 2014 <strong>templateninja</strong>. All Right Reserved.</p>
+          </div>
+
+          <div class="col-md-6 col-sm-6 copy-right">
+            <ul class="list-inline social-icon">
+              <li><a href="#" class="icon-twitter" rel="tooltip" title="" data-placement="top" data-original-title="Twitter"><i class="fa fa-twitter"></i></a></li>
+              <li><a href="#" class="icon-facebook" rel="tooltip" title="" data-placement="top" data-original-title="Facebook"><i class="fa fa-facebook-square"></i></a></li>
+              <li><a href="#" class="icon-youtube" rel="tooltip" title="" data-placement="top" data-original-title="Youtube"><i class="fa fa-youtube"></i></a></li>
+              <li><a href="#" class="icon-instagram" rel="tooltip" title="" data-placement="top" data-original-title="Instagram"><i class="fa fa-instagram"></i></a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- end:copyright -->
+    
+    <!-- begin:demo-panel -->
+    <div class="demo-btn">
+      <i class="fa fa-cog"></i>
+    </div>
+    <div class="demo-container" style="display:none;">
+      <h4>Color Schemes</h4>
+      <ul>
+        <li class="color-option color-blue" data-color-value="blue"></li>
+        <li class="color-option color-red" data-color-value="red"></li>
+        <li class="color-option color-orange" data-color-value="orange"></li>
+        <li class="color-option color-yellow" data-color-value="yellow"></li>
+        <li class="color-option color-green" data-color-value="green"></li>
+        <li class="color-option color-pink" data-color-value="pink"></li>
+      </ul>
+    </div>
+    <!-- end:demo-panel -->
+
+   
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="{% static "js/bootstrap.js" %}"></script>
+    <script src="{% static "js/masonry.pkgd.min.js" %}"></script>
+    <script src="{% static "js/imagesloaded.pkgd.min.js" %}"></script>
+    <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&amp;language=en"></script>
+    <script src="{% static "js/gmap3.min.js" %}"></script>
+    <script src="{% static "js/jquery.isotope.min.js" %}"></script>
+    <script src="{% static "js/jquery.easing.js" %}"></script>
+    <script src="{% static "js/jquery.parallax.js" %}"></script>
+    <script src="{% static "js/script.min.js" %}"></script>
+    <script src="{% static "js/demo.js" %}"></script>
+  </body>
 </html>
