--- a/templates/contenedor.html
+++ b/templates/contenedor.html
@@ -5,12 +5,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
-    <meta name="description" content="danish minimal responsive personal blog and portfolio theme">
-    <meta name="keywords" content="blog, personal blog, portfolio, responsive, bootstrap, masonry, isotope, parallax, multi color, 2 columns, minimal, elegant, simple, clean">
-    <meta name="author" content="templateninja">
+    <meta name="description" content="">
+    <meta name="keywords" content="">
+    <meta name="author" content="kziete">
     <link rel="shortcut icon" href="img/favicon.png">
 
-    <title>Danish./</title>
+    <title>Malditos políticos</title>
 
     <!-- Bootstrap core CSS -->
     <link href="{% static "css/bootstrap.css" %}" rel="stylesheet">
