--- a/templates/datos/evento_detail.html
+++ b/templates/datos/evento_detail.html
@@ -1,5 +1,11 @@
 {% extends "cont-sidebar.html" %}
 
 {% block inner_content %}
-<h1>{{object}}</h1>
+<div class="col-md-8 col-sm-8">
+    <div class="row container-post">
+        <div class="col-md-12">
+			<h1>{{object}}</h1>
+		</div>
+	</div>
+</div>
 {% endblock %}
