--- a/templates/contenedor.html
+++ b/templates/contenedor.html
@@ -47,16 +47,16 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="{% url "home" %}"><i class="fa fa-recycle"></i> <span>Dani</span>sh.</a>
+          <a class="navbar-brand" href="{% url "home" %}"><i class="fa fa-trash"></i> <span>Apo</span>do.</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="navbar-top">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="page.html">Page</a></li>
+            <li><a href="/">Home</a></li>
+            <li><a href="/sobrenosotros">Sobre nosotros</a></li>
+            <li><a href="/contacto">Contacto</a></li>
+            <!--li><a href="page.html">Page</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages <b class="caret"></b></a>
               <ul class="dropdown-menu">
@@ -67,7 +67,7 @@
                 <li><a href="portfolio.html">Portfolio</a></li>
                 <li><a href="portfolio-single.html">Portfolio Single</a></li>
               </ul>
-            </li>
+            </li-->
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
@@ -81,8 +81,8 @@
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
                     <div class="title-desc">
-                        <h2>Our Blog /</h2>
-                        <p>Danish is a sexy theme.</p>
+                        <h2>Chile ya no olvida</h2>
+                        <p>Si tiene un mejor nombre, es bienvenido.</p>
                     </div>
                 </div>
             </div>
