--- a/templates/contenedor.html
+++ b/templates/contenedor.html
@@ -82,7 +82,7 @@
                 <div class="col-md-8 col-md-offset-2">
                     <div class="title-desc">
                         <h2>Chile ya no olvida</h2>
-                        <p>Si tiene un mejor nombre, es bienvenido.</p>
+                        <p>Si su candidato se encuentra en este sitio, seguramente esta votando de manera desinformada</p>
                     </div>
                 </div>
             </div>
