--- a/templates/datos/evento_list.html
+++ b/templates/datos/evento_list.html
@@ -4,6 +4,9 @@
 
 <div class="col-md-8 col-sm-8">
     <div class="row container-post">
+        <div class="col-md-12">
+        <h2>Últimas cagadas</h2>
+        </div>
     	{% for evento in object_list %}
         <div class="col-md-12">
             <div class="post-container">
